Make further changes to Controller Docs
Added Activity Stream, corrected xrefs

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/assemblies/platform/assembly-controller-inventories.adoc
+++ b/downstream/assemblies/platform/assembly-controller-inventories.adoc
@@ -7,21 +7,21 @@ ifdef::context[:parent-context: {context}]
 
 = Inventories
 
-ifdef::controller-GS[]
-An inventory is a collection of hosts managed by {ControllerName}.
-Organizations are assigned to inventories, while permissions to launch playbooks against inventories are controlled at the user or team level.
+//ifdef::controller-GS[]
+//An inventory is a collection of hosts managed by {ControllerName}.
+//Organizations are assigned to inventories, while permissions to launch playbooks against inventories are controlled at the user or team level.
 
-For more information, see the following documentation:
+//For more information, see the following documentation:
 
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-user-permissions[Adding and removing user permissions]
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-team-add-user[Adding or removing a user]
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_planning_guide/index#about_the_installer_inventory_file[About the installer inventory file]
+//* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-user-permissions[Adding and removing user permissions]
+//* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-team-add-user[Adding or removing a user]
+//* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_planning_guide/index#about_the_installer_inventory_file[About the installer inventory file]
 
-include::platform/proc-controller-create-inventory.adoc[leveloffset=+1]
-include::platform/con-controller-groups-hosts.adoc[leveloffset=+1]
-include::platform/proc-controller-add-groups-hosts.adoc[leveloffset=+2]
-endif::controller-GS[]
-ifdef::controller-UG[]
+//include::platform/proc-controller-create-inventory.adoc[leveloffset=+1]
+//include::platform/con-controller-groups-hosts.adoc[leveloffset=+1]
+//include::platform/proc-controller-add-groups-hosts.adoc[leveloffset=+2]
+//endif::controller-GS[]
+//ifdef::controller-UG[]
 
 {PlatformName} works against a list of managed nodes or hosts in your infrastructure that are logically organized, using an inventory file.
 You can use the {PlatformName} installer inventory file to specify your installation scenario and describe host deployments to Ansible.
@@ -113,7 +113,7 @@ include::platform/ref-controller-export-old-scripts.adoc[leveloffset=+3]
 include::platform/ref-controller-view-completed-jobs.adoc[leveloffset=+1]
 include::platform/proc-controller-run-ad-hoc-commands.adoc[leveloffset=+1]
 
-endif::controller-UG[]
+//endif::controller-UG[]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
