--- a/downstream/modules/platform/con-controller-administration.adoc
+++ b/downstream/modules/platform/con-controller-administration.adoc
@@ -6,7 +6,7 @@ The *Administration* menu provides access to the administrative options of {Cont
 From here, you can create, view, and edit:
 
 //activity stream is an unconnected procedure. It needs a home.
-* TBD[Activity Stream]
+* xref:assembly-controller-activity-stream[Activity Stream]
 * xref:controller-approval-nodes[Workflow Approvals]
 * xref:controller-notifications[Notifications]
 * link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-management-jobs[Management Jobs]
