--- a/downstream/modules/platform/con-controller-capacity-determination.adoc
+++ b/downstream/modules/platform/con-controller-capacity-determination.adoc
@@ -22,5 +22,5 @@ This guarantees that jobs do not get stuck as a result of an under-provisioned s
 
 .Additional resources
 
-* For information on container groups, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-capacity[Container capacity limits] in the _{ControllerAG}_.
+* For information on container groups, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-container-capacity[Container capacity limits] in _{ControllerAG}_.
 * For information on sliced jobs and their impact to capacity, see xref:controller-job-slice-execution-behavior[Job slice execution behavior].
