--- a/downstream/modules/platform/con-controller-infrastructure.adoc
+++ b/downstream/modules/platform/con-controller-infrastructure.adoc
@@ -2,14 +2,13 @@
 
 = Infrastructure menu
 
-The *Infrastucture* menu provides quick access to {ControllerName} resources such as:
+The *Infrastucture* menu provides quick access to the following {ControllerName} resources:
 
 * xref:assembly-controller-topology-viewer[Topology View]
 * xref:controller-inventories[Inventories]
-* Hosts
+* xref:assembly-controller-hosts[Hosts]
 * xref:controller-instance-groups[Instance Groups]
 * xref:assembly-controller-instances[Instances]
 * xref:assembly-controller-execution-environments[Execution Environments]
-//Maybe separate
-//* Credentials
-//* Credential Types
+* xref:controller-credentials[Credentials]
+* xref:ref-controller-credential-types[Credential Types]
