--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -56,18 +56,19 @@ include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
 include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
 //Moved to Donna's Access management document
-//include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
+//include::platform/assembly-controller-organizations.adoc[leveloffset=+1
 //include::platform/assembly-controller-users.adoc[leveloffset=+1]
 //include::platform/assembly-controller-teams.adoc[leveloffset=+1]
 //Possibly in Donna's credentials document
 include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
 include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
+include::platform/assembly-controller-activity-stream.adoc[leveloffset=+1]
 //Moved to admin guide
 //include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
 //include::platform/assembly-controller-applications.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-notifications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-attributes-custom-notifications.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-setting-up-insights.adoc[leveloffset=+1]
 include::platform/assembly-controller-best-practices.adoc[leveloffset=+1]
 //RBAC contents to Donna's document, Jobs info to Jobs.
