--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -8,4 +8,4 @@ You can connect execution nodes through an egress model from your environment us
 Alternatively, mesh ingress sets up hop nodes on the controller and then you can peer execution nodes to them.
 
 .Figure 1. Ingress vs Egress
-image:ingress_vs_egress.png[Ingress vs Engress] 
+image:ingress_vs_egress.png[Ingress vs Egress] 
