AAP-27282 - Updated attribute for credentials

--- a/downstream/modules/eda/proc-eda-set-up-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential.adoc
@@ -15,7 +15,7 @@ You can use any SCM provider that supports `basic auth`.
 // ddacosta: I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 // Also, Credentials will be centrally defined at the platform level for 2.5. Steps here should be verified/rewritten as appropriate and possibly relocated to Authentication docs
 . Log in to the {EDAcontroller} Dashboard.
-. From the navigation panel, select {MenuAMCredentials}.
+. From the navigation panel, select {MenuADCredentials}.
 . Click btn:[Create credential].
 . Insert the following:
 +
