--- a/downstream/modules/platform/proc-controller-adding-gpg-key.adoc
+++ b/downstream/modules/platform/proc-controller-adding-gpg-key.adoc
@@ -11,7 +11,7 @@ $ gpg --export --armour <key fingerprint> > my_public_key.asc
 ----
 
 [arabic]
-. From the navigation panel, select {MenuAMCredentials}.
+. From the navigation panel, select {MenuAECredentials}.
 . Click btn:[Create credential].
 . Give a meaningful name for the new credential, for example, "Infrastructure team public GPG key".
 . In the *Credential type* field, select *GPG Public Key*.
