--- a/downstream/modules/platform/proc-controller-create-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential.adoc
@@ -18,7 +18,7 @@ Add more credentials as needed.
 endif::controller-UG[]
 
 .Procedure
-. From the navigation panel, select {MenuAMCredentials}.
+. From the navigation panel, select {MenuAECredentials}.
 ifdef::controller-GS[]
 . To add a new credential, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating a credential] in _{ControllerUG}_.
 +
