--- a/downstream/modules/platform/proc-controller-edit-credential.adoc
+++ b/downstream/modules/platform/proc-controller-edit-credential.adoc
@@ -8,5 +8,5 @@ As part of the initial setup, you can leave the default *Demo Credential* as it 
 
 . Edit the credential by using one of these methods:
 ** Go to the credential Details page and click btn:[Edit].
-** From the navigation panel, select {MenuAMCredentials}. Click btn:[Edit] next to the credential name and edit the appropriate details. 
+** From the navigation panel, select {MenuAECredentials}. Click btn:[Edit] next to the credential name and edit the appropriate details. 
 . Save your changes.
