--- a/downstream/modules/platform/ref-controller-credentials-getting-started.adoc
+++ b/downstream/modules/platform/ref-controller-credentials-getting-started.adoc
@@ -2,7 +2,7 @@
 
 = Getting started with credentials
 //[ddacosta] This should really be rewritten as a procedure because it includes steps.
-From the navigation panel, select {MenuAMCredentials} to access the *Credentials* page.
+From the navigation panel, select {MenuAECredentials} to access the *Credentials* page.
 
 image:credentials-demo-edit-details.png[Credentials]
 
