--- a/downstream/modules/hub/proc-configure-automation-hub-server-gui.adoc
+++ b/downstream/modules/hub/proc-configure-automation-hub-server-gui.adoc
@@ -16,7 +16,7 @@ Creating a new token revokes any previous tokens generated for {HubName}. Update
 
 . Navigate to your {ControllerName}.
 . Create a new credential.
-.. Navigate to {MenuAMCredentials}.
+.. Navigate to {MenuAECredentials}.
 .. Click btn:[Add].
 .. Enter the name for your new credential in the *Name* field.
 .. Optional: Enter a description and enter or select the name of the organization with which the credential is associated.
