--- a/downstream/modules/hub/proc-create-credential.adoc
+++ b/downstream/modules/hub/proc-create-credential.adoc
@@ -11,7 +11,7 @@ To store {ExecEnvShort} images, add the credentials of only your selected contai
 .Procedure
 // For 2.5 this will be Log in to Ansible Automation Platform. From the navigation panel select Access Management > Credentials. Select the Automation Execution tab
 . Navigate to {ControllerName}.
-. From the navigation panel, select {MenuAMCredentials}.
+. From the navigation panel, select {MenuAECredentials}.
 . Click btn:[Add] to create a new credential.
 . Enter an authorization *Name*, *Description*, and *Organization*.
 . Select the *Credential Type*.
