--- a/downstream/modules/platform/proc-controller-create-insights-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-insights-credential.adoc
@@ -6,7 +6,7 @@ Use the following procedure to create a new credential for use with Red Hat Insi
 
 .Procedure
 
-. From the navigation panel, select {MenuAMCredentials}.
+. From the navigation panel, select {MenuAECredentials}.
 . Click btn:[Create credential].
 . Enter the appropriate details in the following fields:
 
