--- a/downstream/modules/platform/proc-operator-external-db-hub.adoc
+++ b/downstream/modules/platform/proc-operator-external-db-hub.adoc
@@ -22,7 +22,7 @@ The external database must be a PostgreSQL database that is the version supporte
 
 [NOTE]
 ====
-{PlatformNameShort} {PlatformVers} supports PostgreSQL 15.
+{PlatformNameShort} {PlatformVers} supports {PostgresVers}.
 ====
 
 .Procedure
