--- a/downstream/modules/platform/ref-controller-credential-cyberark-conjur.adoc
+++ b/downstream/modules/platform/ref-controller-credential-cyberark-conjur.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/ref-cyberark-conjur-lookup[CyberArk Conjur Secrets Manager Lookup].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/assembly-controller-secret-management#ref-cyberark-conjur-lookup[CyberArk Conjur Secrets Manager Lookup].
