--- a/downstream/modules/platform/ref-controller-credential-thycotic-server.adoc
+++ b/downstream/modules/platform/ref-controller-credential-thycotic-server.adoc
@@ -4,4 +4,4 @@
 
 This is considered part of the secret management capability. 
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/ref-thycotic-secret-server[Thycotic Secret Server].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/assembly-controller-secret-management#ref-thycotic-secret-server[Thycotic Secret Server].
