AAP-23850-update: Updated the authentication options content

--- a/lightspeed/modules/proc_login-vscode-extension.adoc
+++ b/lightspeed/modules/proc_login-vscode-extension.adoc
@@ -13,18 +13,14 @@ After installing and configuring the VS Code extension, you can log in to the An
 +
 Users are authenticated using your {PlatformName} login. 
 +
-To sign in, you can use the *Connect* button or the *Accounts* button, and use the option *Sign in with Ansible Lightspeed to use Ansible* from VS Code. Once prompted, select *Log in with {PlatformNameShort}*, and log in with the authorization mechanism that your automation controller is configured with. 
+To sign in, you can use the *Connect* button in the Ansible Lightspeed view, or the *Sign in with Ansible Lightspeed to use Ansible* option in the *Accounts* menu. Once prompted in the browser, select *Log in with Ansible Automation Platform*, and log in with the authorization mechanism that your automation controller is configured with. 
 
 * *Ansible Lightspeed cloud service*
 +
 Users are authenticated using {RHSSO} ({RHSSOshort}).
 +
-To sign in, you can use the *Connect* button or the *Accounts* button and then select one of the following options:
+To sign in from VS Code, you can use the *Connect* button in the Ansible Lightspeed view, or the *Sign in with Ansible Lightspeed to use Ansible* option in the *Accounts* menu. Follow the on-screen prompts to log in and access the Ansible Lightspeed service using your ({RHSSOshort}).
 
-** *Sign in with Ansible Lightspeed to use Ansible*
-** *Sign in with Red Hat to use Ansible*
-+
-Based on the option you selected, follow the on-screen prompts to log in and access the Ansible Lightspeed service.
 +
 [NOTE]
 +
@@ -35,23 +31,26 @@ If you are using a cloud development environment at a domain unknown by Ansible 
 == Procedure
 
 . Open the VS Code application.
-. Use one of the following ways to connect to the Ansible Lightspeed service. 
-** Using the *Connect* button:
-.. From the navigation menu, click the *Ansible* icon. 
-.. Under Ansible Lightspeed Login, click *Connect*.
-** Using the *Accounts* button:
-.. From the navigation menu, click the *Accounts* icon and select *Sign in with Ansible Lightspeed*.
+. Sign in using either the *Connect* button in the Ansible Lightspeed view or the *Accounts* menu.
+
+* *Sign in using the Connect button*:
+.. From the VS Code activity bar, click the *Ansible* icon.
+.. In the *Ansible Lightspeed* view, click *Connect*.
+.. Follow the on-screen prompts to sign in to Ansible Lightspeed. 
+
+* *Sign in using the Accounts menu*:
+.. From the VS Code activity bar, click the *Accounts* menu.
+.. Select whether you want to *Sign in with Ansible Lightspeed to use Ansible* or *Sign in with Red Hat to use Ansible*.
 +
 [NOTE]
 +
 ====
-This option is displayed when the VS Code extension is in an active state. The extension is activated after you open the Ansible side panel or after you open an Ansible file in the VS Code editor. If you do not see this option, use the *Connect* button to link to the Ansible Lightspeed service.
+* *Sign in with Ansible Lightspeed*: This option is displayed when the VS Code extension is in an active state. The extension is activated after you open the Ansible side panel or after you open an Ansible file in the VS Code editor. If you do not see this option, use the *Connect* button to link to the Ansible Lightspeed service.
+* *Sign in with Red Hat*: This option is displayed if you are using a cloud development environment at a domain unknown by Ansible Lightspeed, such as on-premise Red Hat OpenShift Dev Spaces, your *Accounts* sign-in menu provides the option *Sign-in with Red Hat to use Ansible*. This option uses a device code flow to successfully complete the sign-in process and requires the Red Hat Authentication extension v0.2.0 or later. If you require this authentication flow but don't see the *Sign-in with Red Hat to use Ansible* option, ensure you are using the Ansible VS Code extension v24.5.2 or later.
 ====
 
-. When prompted, click *Allow* to sign in. 
-. In the *Authorize Ansible Lightspeed for VS Code* window, click *Authorize*.
-. In the *Do you want Code to open the external website?* window, click *Open*. The link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page] is displayed.
-. Click menu:Log in[Log in with Red Hat].
-. Enter your Red Hat account username and password. 
+.. Follow the on-screen prompts to sign in to Ansible Lightspeed. 
+
 +
-On successful authentication, the login screen is displayed along with your username and your assigned user role. The VS code extension is now connected with Ansible Lightspeed service. 
+On successful authentication, the login screen is displayed along with your username and your assigned user role. 
+
