Make further changes to Controller Docs
Corrections

Continue updating Controller docs

https://issues.redhat.com/browse/AAP-26692

--- a/downstream/assemblies/platform/assembly-ag-instance-and-container-groups.adoc
+++ b/downstream/assemblies/platform/assembly-ag-instance-and-container-groups.adoc
@@ -7,7 +7,7 @@ This is called a container group.
 You can execute jobs in a container group only as-needed per playbook. 
 For more information, see xref:controller-container-groups[Container groups].
 
-For {ExecEnvShort}s, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#assembly-controller-execution-environments[Execution environments] in _{ControllerUG}_.
+For {ExecEnvShort}s, see xref:assembly-controller-execution-environments[Execution environments].
 
 include::platform/con-controller-instance-groups.adoc[leveloffset=+1]
 include::platform/ref-controller-group-policies-automationcontroller.adoc[leveloffset=+2]
