--- a/lightspeed/modules/proc_login-vscode-extension.adoc
+++ b/lightspeed/modules/proc_login-vscode-extension.adoc
@@ -40,13 +40,13 @@ If you are using a cloud development environment at a domain unknown by Ansible 
 
 * *Sign in using the Accounts menu*:
 .. From the VS Code activity bar, click the *Accounts* menu.
-.. Select whether you want to *Sign in with Ansible Lightspeed to use Ansible* or *Sign in with Red Hat to use Ansible*.
+.. Sign in with Ansible Lightspeed to use Ansible or sign in with Red Hat to use Ansible, depending on the sign-in option you are presented with.
 +
 [NOTE]
 +
 ====
-* *Sign in with Ansible Lightspeed*: This option is displayed when the VS Code extension is in an active state. The extension is activated after you open the Ansible side panel or after you open an Ansible file in the VS Code editor. If you do not see this option, use the *Connect* button to link to the Ansible Lightspeed service.
-* *Sign in with Red Hat*: This option is displayed if you are using a cloud development environment at a domain unknown by Ansible Lightspeed, such as on-premise Red Hat OpenShift Dev Spaces, your *Accounts* sign-in menu provides the option *Sign-in with Red Hat to use Ansible*. This option uses a device code flow to successfully complete the sign-in process and requires the Red Hat Authentication extension v0.2.0 or later. If you require this authentication flow but don't see the *Sign-in with Red Hat to use Ansible* option, ensure you are using the Ansible VS Code extension v24.5.2 or later.
+* The sign-in options are displayed when the VS Code extension is in an active state. The extension is activated after you open the Ansible side panel or after you open an Ansible file in the VS Code editor. If you do not see this option, use the *Connect* button to link to the Ansible Lightspeed service.
+* If you are using a cloud development environment at a domain unknown by Ansible Lightspeed, such as on-premise Red Hat OpenShift Dev Spaces, your *Accounts* sign-in menu provides the option *Sign-in with Red Hat to use Ansible*. This option uses a device code flow to successfully complete the sign-in process and requires the Red Hat Authentication extension v0.2.0 or later. If you require this authentication flow but don't see the *Sign-in with Red Hat to use Ansible* option, ensure you are using the Ansible VS Code extension v24.5.2 or later.
 ====
 
 .. Follow the on-screen prompts to sign in to Ansible Lightspeed. 
