Corrections to Configuring automation execution
Edits to UI based on latest test environment

https://issues.redhat.com/browse/AAP-27309

Affects `titles/controller-admin-guide`

--- a/downstream/assemblies/platform/assembly-ag-controller-config.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-config.adoc
@@ -2,7 +2,7 @@
 
 = {ControllerNameStart} configuration
 
-You can configure some {ControllerName} options using the *Settings* menu of the User Interface.
+You can configure some {ControllerName} options by using the *Settings* menu of the User Interface.
 
 *Save* applies the changes you make, but it does not exit the edit dialog.
 
