--- a/downstream/modules/platform/proc-controller-configure-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-analytics.adoc
@@ -1,19 +1,19 @@
 [id="proc-controller-configure-analytics"]
 
-= Configure {Analytics}
+= Configuring {Analytics}
 
-Configure {Analytics} on the *Subcriptions* page and the *System settings page* of the Settings menu.
+Configure {Analytics} on the *Subscription* page and the *System Settings* page of the *Settings* menu.
 
 .Procedure
 . From the navigation panel, select {MenuSetSubscription}.
-The Subscription page is displayed.
+The *Subscription* page is displayed.
 . If you have not already set up a subscription, do so now, and ensure that on the next page you have selected *{Analytics}* to use analytics data to enhance future releases of {PlatformNameShort} and to provide the Red Hat insights service to subscribers.
 +
 image::automation_analytics.png[Automation analytics page]
 
 . From the navigation panel, select {MenuSetSystem}.
 . Click btn:[Edit].
-. On the *System settings* page, select *Gather data for {Analytics}*.
+. On the *System Settings* page, select *Gather data for {Analytics}*.
 . You can also configure the following options:
 
 * *Red Hat Customer Name*: This username is used to send data to {Analytics}.
