--- a/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
@@ -2,7 +2,7 @@
 
 = Configuring subscriptions
 
-You can use the *Subscriptions* menu to view the details of your subscription, such as compliance, host-related statistics, or expiry, or you can apply a new subscription.
+You can use the *Subscription* menu to view the details of your subscription, such as compliance, host-related statistics, or expiry, or you can apply a new subscription.
 
 .Procedure
 . From the navigation panel, select {MenuSetSubscription}.
@@ -10,16 +10,13 @@ The *Subscription* page is displayed.
 +
 image::settings_subscription_page.png[Initial subscriptions page]
 . Click btn:[Edit subscription].
-. The *Welcome* page is displayed.
+. You can either enter your Red Hat Username and Password, or attach a current Subscription Manifest in the *Welcome* page.
 +
 image::subscriptions_first-page.png[Suscriptions page for password or manifest]
 + 
-You can either enter your Red Hat Username and Password, or attach a current Subscription Manifest.
 . Click btn:[Next].
-. The *{Analytics}* page is displayed.
+The *{Analytics}* page is displayed.
 +
 image::automation_analytics.png[Automation analytics page]
-. Select the checkbox to use analytics data to enhance future releases of {PlatformNameShort} and to provide the Red Hat insights service to subscribers.
+. Select the checkbox to use analytics data to enhance future releases of {PlatformNameShort} and to give the Red Hat insights service to subscribers.
 . Click btn:[Next] and agree to the terms of the license agreement.
-
-
