--- a/downstream/modules/platform/ref-controller-capacity-planning.adoc
+++ b/downstream/modules/platform/ref-controller-capacity-planning.adoc
@@ -1,6 +1,6 @@
 [id="ref-controller-capacity-planning"]
 
-= Capacity Planning for deploying {ControllerName}
+= Capacity planning for deploying {ControllerName}
 
 Capacity planning for {ControllerName} is planning the scale and characteristics of your deployment so that it has the capacity to run the planned workload. Capacity planning includes the following phases:
 
