--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -12,7 +12,7 @@ include::attributes/attributes.adoc[]
 = Configuring automation execution
 
 This guide describes the administration of {ControllerName} through custom scripts, management jobs, and more.
-Written for DevOps engineers and administrators, the {ControllerName} Administration Guide assumes a basic understanding of the systems requiring management with {ControllerName}s easy-to-use graphical interface.
+Written for DevOps engineers and administrators, the Configuring automation execution guide assumes a basic understanding of the systems requiring management with {ControllerName}s easy-to-use graphical interface.
 
 include::{Boilerplate}[]
 
