--- a/downstream/titles/aap-installation-guide/master.adoc
+++ b/downstream/titles/aap-installation-guide/master.adoc
@@ -21,6 +21,7 @@ include::platform/assembly-platform-install-overview.adoc[leveloffset=+1]
 include::platform/assembly-system-requirements.adoc[leveloffset=+1]
 include::platform/assembly-platform-install-scenario.adoc[leveloffset=+1]
 //[dcdacosta]Removing this assembly because modules are now included in assembly-platform-install-scenario] include::platform/assembly-deploy-high-availability-hub.adoc[leveloffset=+1]
+include::platform/assembly-horizontal-scaling.adoc[leveloffset=+1]
 include::platform/assembly-disconnected-installation.adoc[leveloffset=+1]
 //12/2/22 [dcd: moved following assemblies to new operations guide]
 //include::platform/assembly-configuring-proxy-support.adoc[leveloffset=+1]
