--- a/downstream/titles/aap-plugin-rhdh-install/master.adoc
+++ b/downstream/titles/aap-plugin-rhdh-install/master.adoc
@@ -2,16 +2,16 @@
 :numbered:
 :toclevels: 4
 :experimental:
-:context: aap-plugin-rhdh
+:context: aap-plugin-rhdh-installing
 
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Ansible plug-ins for Red Hat Developer Hub
+= Installing Ansible plug-ins for Red Hat Developer Hub
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-This guide describes how to install and use {AAPRHDH}.
+This guide describes how to install {AAPRHDH}.
 This document has been updated to include information for the latest release of {PlatformNameShort}.
 
 include::{Boilerplate}[]
@@ -21,4 +21,3 @@ include::devtools/assembly-rhdh-planning.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-install.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-upgrading-uninstalling.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-configure.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-using.adoc[leveloffset=+1]
