--- a/downstream/modules/platform/proc-hs-eda-setup.adoc
+++ b/downstream/modules/platform/proc-hs-eda-setup.adoc
@@ -8,4 +8,19 @@ To scale up (add more nodes) or scale down (remove nodes), you must update the c
 
 .Procedure
 . Update the inventory to add two more worker nodes:
-. 
+
++
+-----
+[automationedacontroller]
+
+3.88.116.111 routable_hostname=automationedacontroller-api.example.com eda_node_type=api
+
+3.88.116.112 routable_hostname=automationedacontroller-api.example.com eda_node_type=worker
+
+# two more worker nodes
+3.88.116.113 routable_hostname=automationedacontroller-api.example.com eda_node_type=worker
+
+3.88.116.114 routable_hostname=automationedacontroller-api.example.com eda_node_type=worker
+-----
+
+. Re-run the installer.
