AAP-20808 Added cross-reference to set-up procedure

--- a/downstream/modules/platform/con-hs-eda-sizing-scaling.adoc
+++ b/downstream/modules/platform/con-hs-eda-sizing-scaling.adoc
@@ -7,5 +7,5 @@ API nodes process user requests (interactions with the UI or API) while worker n
 Since activations are variable and controlled by worker nodes, the supported approach for scaling is to use separate API and worker nodes instead of hybrid nodes due to the efficient allocation of hardware resources by worker nodes. By separating the nodes, you can scale each type independently based on specific needs, leading to better resource utilization and cost efficiency.
 
 An example of an instance in which you might consider scaling up your node deployment is when you want to deploy Event-Driven Ansible for a small group of users that will run a large number of activations. In this case, one API node is adequate, but if you require more, you can scale up to add three additional worker nodes. 
-To set up a multi-node deployment, follow the procedure in the "Setting up horizontal scaling for Event-Driven Ansible controller."
-//Will update the title above with an xref that links to the procedure.
+
+To set up a multi-node deployment, follow the procedure in xref:proc-hs-eda-setup[Setting up horizontal scaling for {EDAcontroller}].
